--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -41,7 +41,8 @@
                                     <h:commandLink styleClass="uk-icon-link uk-text-primary"
                                                    pt:uk-icon="icon: plus-circle; ratio: 1.5"
                                                    pt:uk-toggle="target: #modal-profesor"
-                                                   pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000">
+                                                   pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"
+                                                   onclick="validarActualizacion(0)" >
                                         <f:ajax render="formulario-modal-profesor"/>
                                     </h:commandLink>
                                 </h:form>
@@ -102,7 +103,7 @@
                                         <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; boundary: .tabla-profesor">
                                             <ul class="uk-nav uk-dropdown-nav">
                                                 <li>
-                                                    <h:commandLink pt:uk-toggle="target: #modal-profesor">
+                                                    <h:commandLink pt:uk-toggle="target: #modal-profesor" onclick="validarActualizacion(1)">
                                                         <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon" />
                                                         <span class="uk-text-middle"><h:outputText value="#{boton['update']}" styleClass="primera-mayuscula uk-display-inline-block"/></span>
                                                         <f:setPropertyActionListener value="#{profesorModelo}" target="#{administracionProfesorControlador.profesorModelo}"/>
