--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -94,7 +94,7 @@
                         <h:graphicImage library="img" styleClass="ayuda-imagen" name="/icono/information.svg" pt:uk-svg=""/>
                     </span>
                     <h:panelGroup layout="block" styleClass="uk-dropdown" style="min-width: 120px; padding: 10px; color: black; white-space: nowrap" pt:uk-dropdown="mode: click">
-                        <p style="margin: 3px">10/10/1 -> reactivos contestados / reactivos totales / pendientes por calificar </p>
+                        <p style="margin: 3px">10/10/1 -> reactivos contestados / reactivos totales / calificados</p>
                         <p style="margin: 3px">10/10 -> reactivos respondidos / reactivos totales </p>
                     </h:panelGroup>
                 </h:panelGroup>
