Mapeo de titulos modulo profesor, vista detalle-profesor/admin-alumnos/tarea-alumnos

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -248,7 +248,7 @@
                                         <h:graphicImage library="img" name="/icono/information.svg" styleClass="ayuda-imagen" pt:uk-svg="" />
                                     </span>
                                     <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; pos: top-left" style="min-width: 120px; white-space: nowrap; color: black; padding: 10px; border: 3px solid #0e6dcd">
-                                        <p style="margin: 3px">Total de videos: Numero total de tareas asignadas al alumno durante toda su vida escolar </p>
+                                        <p style="margin: 3px">Total de videos: Numero total de videos asignados al alumno en su nivel actual. </p>
                                     </h:panelGroup>
                                 </h:panelGroup>
                             </f:facet>
