--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -94,8 +94,8 @@
                         <h:graphicImage library="img" styleClass="ayuda-imagen" name="/icono/information.svg" pt:uk-svg=""/>
                     </span>
                     <h:panelGroup layout="block" styleClass="uk-dropdown" style="min-width: 120px; padding: 10px; color: black; white-space: nowrap" pt:uk-dropdown="mode: click">
-                        <p style="margin: 3px">10/10/1 -> reactivos contestados / reactivos totales / reactivos calificados</p>
-                        <p style="margin: 3px">10/10 -> reactivos respondidos / reactivos totales </p>
+                        <p style="margin: 3px">#{profesor['student.administration.message.three.columns']}</p>
+                        <p style="margin: 3px">#{profesor['student.administration.message.two.columns']}</p>
                     </h:panelGroup>
                 </h:panelGroup>
                 <h:form id="formulario-tabla-alumno">
