--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -116,7 +116,7 @@
                     </h:panelGroup>
                 </h:form>
                 <div class="boton-reporte">
-                    <h:button outcome="buzon" value="#{profesor['mail.box']}" styleClass="boton-escuadron-base"/>
+                    <h:button outcome="buzon" value="#{profesor['mail.box']}" styleClass="boton-escuadron-base" pt:data-total-buzon="#{totalBuzonControlador.tareasAsigandas}"/>
                     <button id="boton-reporte" class="boton-escuadron-base">#{profesor['report']}</button>
                 </div>
             </h:panelGroup>
@@ -145,8 +145,30 @@
             </div>
             <h:form id="formulario-tabla" styleClass="uk-form-stacked">
                 <div class=" uk-margin-small-top">
+                    <ui:fragment rendered="#{empty dashboardProfesorControlador.grupoModeloLista}">
+                        <table class="uk-table uk-table-middle">
+                            <thead class="uk-background-primary">
+                            <tr>
+                                <th><span class="letra-titulo">#{profesor['dashboard.table.schoolgrade']}</span></th>
+                                <th><span class="letra-titulo">#{profesor['dashboard.group']}</span></th>
+                                <th><span class="letra-titulo">#{profesor['dashboard.total.students']}</span></th>
+                                <th><span class="letra-titulo ">#{etiqueta['options']}</span></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td colspan="6">
+                                    <div class="uk-flex uk-flex-center">
+                                        <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </ui:fragment>
                     <h:dataTable
                             value="#{dashboardProfesorControlador.grupoModeloLista}"
+                            rendered="#{not empty dashboardProfesorControlador.grupoModeloLista}"
                             id="tabla-grupo"
                             var="grupo"
                             styleClass="uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria uk-table-hover uk-text-center tabla-profesor-dropdown"
