--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -148,7 +148,7 @@
                                              rows="5"
                                              styleClass="uk-table uk-table-divider uk-table-middle uk-table-hover"
                                              footerClass="uk-background-primary"
-                                             columnClasses=",,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
+                                             columnClasses=",,uk-text-center,uk-text-center,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
                                     <h:column headerClass="uk-background-primary uk-width-small">
                                         <f:facet name="header">
                                             <h:outputText styleClass="letra-titulo"
