--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -116,7 +116,7 @@
                     </h:panelGroup>
                 </h:form>
                 <div class="boton-reporte">
-                    <h:button outcome="buzon" value="#{profesor['mail.box']}" styleClass="boton-escuadron-base" pt:data-total-buzon="#{totalBuzonControlador.tareasAsigandas}"/>
+                    <h:button outcome="buzon" id="inbox-boton" value="#{profesor['mail.box']}" styleClass="boton-escuadron-base" pt:data-total-buzon="#{totalBuzonControlador.tareasAsigandas}"/>
                     <button id="boton-reporte" class="boton-escuadron-base">#{profesor['report']}</button>
                 </div>
             </h:panelGroup>
@@ -146,18 +146,18 @@
             <h:form id="formulario-tabla" styleClass="uk-form-stacked">
                 <div class=" uk-margin-small-top">
                     <ui:fragment rendered="#{empty dashboardProfesorControlador.grupoModeloLista}">
-                        <table class="uk-table uk-table-middle">
-                            <thead class="uk-background-primary">
+                        <table class="uk-table uk-table-middle tablaPrimaria">
+                            <thead >
                             <tr>
-                                <th><span class="letra-titulo">#{profesor['dashboard.table.schoolgrade']}</span></th>
-                                <th><span class="letra-titulo">#{profesor['dashboard.group']}</span></th>
-                                <th><span class="letra-titulo">#{profesor['dashboard.total.students']}</span></th>
-                                <th><span class="letra-titulo ">#{etiqueta['options']}</span></th>
+                                <th class="thPrimario uk-text-center"><span>#{profesor['dashboard.table.schoolgrade']}</span></th>
+                                <th class="thPrimario uk-text-center"><span >#{profesor['dashboard.group']}</span></th>
+                                <th class="thPrimario uk-text-center"><span >#{profesor['dashboard.total.students']}</span></th>
+                                <th class="thPrimario uk-text-center"><span >#{etiqueta['options']}</span></th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
-                                <td colspan="6">
+                            <tr >
+                                <td colspan="6" class="tdPrimario">
                                     <div class="uk-flex uk-flex-center">
                                         <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
                                     </div>
@@ -347,8 +347,13 @@
             });
         </script>
         <script type="application/javascript">
+            let botonInbox = document.querySelector('#inbox-boton');
             if (sessionStorage.getItem('mensaje') === null){
                 sessionStorage.setItem('mensaje','true');
+            }
+            if (parseInt(botonInbox.dataset.totalBuzon) === 0){
+                botonInbox.disabled = true;
+                botonInbox.classList.add('boton-disabilitado')
             }
 
             function mensajeConfirmacion(element) {
@@ -358,6 +363,7 @@
                     mensajeConfirmacion.classList.add('visibilidad');
                 });
             }
+
         </script>
     </ui:define>
 
