Se agregan las constraseñas del profesor y coordinador

--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -110,6 +110,12 @@
                                     #{coordinadorModelo.correoEletronico}
                                 </h:column>
                                 <h:column>
+                                    <f:facet name="header"><span class="letra-titulo">contraseña</span></f:facet>
+                                    <h:outputText value="#{coordinadorModelo.contrasenia}">
+                                        <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                    </h:outputText>
+                                </h:column>
+                                <h:column>
                                     <f:facet name="header"><span class="letra-titulo">#{etiqueta['options']}</span></f:facet>
                                     <div class="uk-inline  ">
                                         <h:outputText styleClass="uk-icon-button uk-text-center" pt:uk-icon="more-vertical"/>
