--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -88,9 +88,10 @@
                                     ${profesorModelo.nombre} ${profesorModelo.apellidoPaterno} ${profesorModelo.apellidoMaterno}
                                 </h:column>
                                 <h:column>
-                                    <f:facet name="header">Sexo</f:facet>
-                                        <h:outputText rendered="#{'M' eq profesorModelo.sexo || 'm' eq profesorModelo.sexo}" value="Masculino"/>
-                                        <h:outputText rendered="#{'F' eq profesorModelo.sexo || 'f' eq profesorModelo.sexo}" value="Femenino"/>
+                                    <f:facet name="header">contraseña</f:facet>
+                                    <h:outputText value="#{profesorModelo.contrasenia}">
+                                        <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                    </h:outputText>
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">correo</f:facet>
