muestra la lista de escuelas con los dias de licencia de forma correcta

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -180,7 +180,7 @@
                                     </h:column>
                                     <h:column headerClass="uk-background-primary uk-width-small uk-text-center">
                                         <f:facet name="header"><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.remaining.days']}</span></f:facet>
-                                        #{escuela.diasRestantes}
+                                        #{estatusControlador.busca(escuela.claveCentroTrabajo)}
                                     </h:column>
                                     <h:column headerClass="uk-background-primary uk-width-small uk-text-center">
                                         <f:facet name="header"><span class="letra-titulo">galaxia</span></f:facet>
